--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "kill -9 $(lsof -t -i:3000) && nodemon --signal SIGTERM server.js",
+    "start": "nodemon --signal SIGTERM server.js",
     "dev": "NODE_ENV=development nodemon --inspect server.js",
     "prod": "NODE_ENV=production node server.js"
   },
@@ -12,8 +12,10 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.7",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
