--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
     "pug": "2.0.0-beta11",
+    "redis": "^4.7.0",
+    "svg-captcha": "^1.4.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
