--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "type": "module",
   "dependencies": {
+    "amqplib": "^0.10.5",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -26,6 +27,7 @@
     "pug": "2.0.0-beta11",
     "redis": "^4.7.0",
     "svg-captcha": "^1.4.0",
+    "uuid": "^11.0.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
