--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "redis": "^4.7.0",
     "svg-captcha": "^1.4.0",
     "uuid": "^11.0.5",
+    "winston": "^3.17.0",
+    "winston-mysql": "^1.1.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
